# MIPS64_Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  MIPS64_Emulator.sln  MIPS64_Emulator.vcxproj  MIPS64_Emulator.vcxproj.filters  README.md  build.bat  build.c  build.sh
include/mips64/: core.h
src/: BUS.cpp  BUS.hpp  main.c  olc_64.cpp  olc_64.hpp
src/mips64/: core.c
